--- a/assets/css/cha_detail.css
+++ b/assets/css/cha_detail.css
@@ -1833,7 +1833,7 @@ h2 {
 
 .weapon-effect-modal-content {
     background-color: #1a1a1a;
-    border: 1px solid #e5e5e5;
+    border: 1px solid #e5e5e56b;
     border-radius: 8px;
     width: 90%;
     max-width: 500px;
@@ -1842,7 +1842,7 @@ h2 {
     position: relative;
     padding: 20px;
     color: #fff;
-    box-shadow: 0 8px 30px rgba(255, 255, 255, 0.1);
+    box-shadow: 0 8px 10px rgb(0 0 0 / 30%);
     transform: scale(0.95);
     transition: transform 0.3s ease, opacity 0.3s ease;
     opacity: 0;
@@ -1855,6 +1855,12 @@ h2 {
 
 .weapon-effect-modal.show .weapon-effect-modal-content {
     transform: scale(1);
+}
+
+@media (max-width: 768px) {
+    .weapon-effect-modal-content {
+        max-height: 50vh !important;
+    }
 }
 
 .weapon-effect-close {
